engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_turn_completion_repairs_dropped_message_deltas.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: source
---
The transport kept this.
And dropped this.

- Finding — /tmp/file.rs:1
  Keep ::git-stage{cwd=/tmp} literal.
